# mace-unfolded

./: .gitignore  README.md  pyproject.toml
example/: BPOSCAR  GK_run_full.py  GK_run_full_local.py  GK_run_full_local_exchange_inds_test.py  GK_run_full_local_slow.py  GK_run_unfolded.py  InAs_swa.model  InAs_swa_local.model  POSCAR  PPOSCAR
mace_unfolded/: __init__.py  keys.py
mace_unfolded/md_tools/: fileIO.py  lammps_ase_calculator.py  lammps_interface.py  lammps_test.py  md_utils.py  neigh_test.py
mace_unfolded/scripts/: compute_mace_phonons.py  gauge_fix_flux.py  perform_mace_green_kubo.py  relax_mace.py
mace_unfolded/tests/: plot_heat_flux_differences.py  test_calculator.py  test_data_structure.py  test_flux_calculator.py
mace_unfolded/unfolded_heat/: __init__.py  cell.py  comms.py  mace_flux_calculator.py  unfolder.py  unfolder_calculator.py  unfolder_engine.py
