[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mace_unfolded"
authors = [
    { name = "Sandro Wieser", email = "sandro.wieser@tuwien.ac.at" },
]
description = "Extension of mace to allow for unfolded graphs in order to efficiently compute properties like the heat flux"
license = { text = "Apache License 2.0" }
requires-python = ">=3.8"
dependencies = [
    "ase",
    "numpy",
    "scipy",
    "tqdm"
]
readme = "README.md"
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "mace_unfolded.__version__"}

[project.scripts]
mace_perform_green_kubo = "mace_unfolded.scripts.perform_mace_green_kubo:main"
gauge_fix_flux = "mace_unfolded.scripts.gauge_fix_flux:main"
mace_compute_phonons = "mace_unfolded.scripts.compute_mace_phonons:main"
mace_relax = "mace_unfolded.scripts.relax_mace:main"